cmake_minimum_required(VERSION 3.7)
project(UC)

set(CMAKE_CXX_STANDARD 11)
#set(CMAKE_C_FLAGS  ${CMAKE_C_FLAGS} -fpermissive -g)
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -fpermissive)
macro(add_example_target EXAMPLE_TARGET)
    add_executable("example_${EXAMPLE_TARGET}" "example_${EXAMPLE_TARGET}.cpp")
    target_link_libraries("example_${EXAMPLE_TARGET}" pthread)
    target_link_libraries("example_${EXAMPLE_TARGET}" libhiredis.a)
    target_link_libraries("example_${EXAMPLE_TARGET}" libev.a)
    target_link_libraries("example_${EXAMPLE_TARGET}" -lrt)
endmacro(add_example_target)

add_example_target(shm1)
add_example_target(shm2)
add_example_target(shm3)
add_example_target(mmap1)
add_example_target(hashtable)
add_example_target(hashtable2)
add_example_target(hashtable3)
add_example_target(jingqun)
#add_example_target(jingqun2)
add_example_target(binarysearch)
add_example_target(shm_hashtable1)
add_example_target(shm_hashtable2)
add_example_target(quicksort)
add_example_target(heapsort)
add_example_target(socket1)
add_example_target(pthread1)
add_example_target(sem1)
add_example_target(list1)
add_example_target(bitalgorithm)
add_example_target(thread_epoll1)
add_example_target(pthread_cond1)
add_example_target(binary_tree)
add_example_target(binary_tree2)
add_example_target(binary_tree_adt)
add_example_target(binary_tree_avl)
add_example_target(redis_test)
add_example_target(thread_pool)
add_example_target(heap)
add_example_target(d_heap)
add_example_target(sort)
#add_example_target(check_alot_server2)
add_example_target(test)
add_example_target(check_alot_server3)
add_example_target(mem_pool)
add_example_target(morse)
add_example_target(unlockqueue)
add_example_target(huffman)
add_example_target(consistent_hash)
add_example_target(digraph)
add_example_target(graph)
add_example_target(sync)
add_example_target(boost_stacktrace)
add_example_target(sync2)
add_example_target(fifo1)
add_example_target(fifo2)
add_example_target(fallocate)
add_example_target(ftruncate)
add_example_target(fsync)
add_example_target(aio)
#####
add_executable("example_check_alot_server2" "example_check_alot_server2.cpp" "coroutine.cpp")
add_executable("main" "main.cpp")
target_link_libraries("main" -pthread -rdynamic)
add_executable("TestBoodoMtServer" "t.cpp")
#add_executable("test_tjg", "test_tjg.cpp")
add_executable("example_shmqueue_test" "example_shmqueue_test.cpp" "shmqueue/shm_queue.c")
